<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tabata_fragment_title"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFullTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/tabata_fragment_default_full_time"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ar4i.fitmer.presentation.views.TimeSelector
            android:id="@+id/tsPreparation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullTime"
            app:ts_title="@string/tabata_fragment_preparation" />

        <com.ar4i.fitmer.presentation.views.TimeSelector
            android:id="@+id/tsWork"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tsPreparation"
            app:ts_title="@string/tabata_fragment_work" />

        <com.ar4i.fitmer.presentation.views.TimeSelector
            android:id="@+id/tsRest"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tsWork"
            app:ts_title="@string/tabata_fragment_rest" />

        <com.ar4i.fitmer.presentation.views.TimeSelector
            android:id="@+id/tsWorkRounds"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tsRest"
            app:ts_title="@string/tabata_fragment_rounds" />

        <com.ar4i.fitmer.presentation.views.TimeSelector
            android:id="@+id/tsСycles"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tsWorkRounds"
            app:ts_title="@string/tabata_fragment_cycles" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorOnBar"
            android:text="@string/tabata_fragment_start"
            android:textColor="@color/colorBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rvSplash"
            app:layout_constraintStart_toEndOf="@+id/rvSplash"
            app:layout_constraintTop_toBottomOf="@+id/tsСycles" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>